--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,6 @@
     { "src": "server.js", "use": "@vercel/node" }
   ],
   "routes": [
-    { "src": "/posts", "headers": { "Access-Control-Allow-Origin": "*" } }
+    { "src": "/notion-data", "dest": "server.js" }
   ]
 }
